# yet_another_crates_service

./: Cargo.toml  create_db.session.sql  docker-compose.yml
migrations/2025-12-19-153901-0000_create_rustaceans/: down.sql  up.sql
migrations/2025-12-19-153917-0000_create_crates/: down.sql  up.sql
migrations/2025-12-24-205029-0000_create_users/: up.sql
migrations/2025-12-24-205036-0000_create_roles/: up.sql
migrations/2025-12-24-205125-0000_create_users_roles/: up.sql
src/: auth.rs  lib.rs  main.rs  models.rs  repository.rs  schema.rs
src/commands/: mod.rs  roles.rs  users.rs
src/rest_routes/: authentication.rs  crates.rs  mod.rs  rustaceans.rs
tests/: authorization.rs  common.rs  crates.rs  rustaceans.rs
