[package]
name = "cr8t_service"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features=["serde"]}
diesel = {version = "2.1", features = ["chrono"]}
diesel-async = {version = "0.4.1", features = ["postgres"]}
rocket = {version = "0.5", features=["json"]}
rocket_db_pools = {version = "0.1.0", features = ["diesel_postgres"]}
serde = "1.0.228"

[dev-dependencies]
pretty_assertions = "1.4.1"
reqwest = { version = "0.12.26", features = ["json", "blocking"]}
serde_json = "1.0.146"
